complete initial step